# -

./: README.md  config_example.json  excel2word.py
档案管理批量打印软件/: README.md  pyproject.toml  requirements.txt  run-gui.bat  run-gui.sh  run.bat  run.sh  表格转文档.PY
档案管理批量打印软件/excel2word/: __init__.py  __main__.py  cli.py  core.py  gui.py
